fix: 사용자 서비스 수정
 - 로그인/인증 실제 동작 로직 수정
-  사용자별 관심 종목 관리 기능  기능구현
- 개인화된 뉴스 필터링 로직생성